fixed alignment/sizing of lesson/student cards

--- a/frontend/src/Styles/InstructorDashboard.css
+++ b/frontend/src/Styles/InstructorDashboard.css
@@ -100,6 +100,11 @@
 	border-bottom: 3px solid rgb(243, 243, 243);
 }
 
+.recentDrinkBottom {
+	height: 45vh;
+	overflow-y: auto;
+}
+
 .recentDrinkBottom ol {
 	text-align: left;
 	padding: 0;
@@ -167,6 +172,11 @@
 
 .training1Header h6 {
 	font-weight: 250;
+}
+
+.recentLessonsBottom {
+	height: 45vh;
+	overflow-y: auto;
 }
 
 .recentLessonsBottom ol {
